# redis-grpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bench.sh  build.rs  docker-compose.yaml  gen-js.Dockerfile
.github/workflows/: build-artifacts.yml  docker-image.yml  npm-publish.yml  publish-docker.yml  publish-npm.yml  publish.yml  rust.yml
example/client/: package.json
example/client/src/: App.tsx
proto/: docs.md  package-lock.json  package.json  redis_grpc.proto
src/: conn.rs  facade.rs  lib.rs
src/grpc/: server.rs
