[package]
name = "redis-grpc"
version = "0.0.4"
edition = "2018"
authors = ["Roy Tang. <me@roytang.me>"]
description = "gRPC bridging for redis"
readme = "README.md"
license-file = "LICENSE"
keywords = ["gRPC", "redis", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
clap = { version = "3.0.0-beta.4", features = ["default"] }
env_logger = "0.9.0"
log = "0.4.14"
prost = "0.8.0"
prost-types = "0.8.0"
redis = { version = "0.21.2", features = ["tokio-comp"] }
tokio = { version = "1.12.0", features = ['full'] }
tokio-stream = "0.1.7"
tonic = "0.5.2"
tonic-web = "0.1.0"
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
ctrlc = { version = "3.0", features = ["termination"] }

[build-dependencies]
tonic-build = { version = "0.5.2" }
